2000-05-08  Alan Modra  <alan@linuxcare.com.au>

	* versados.c (versados_scan): Init stringlen and pass_2_done.

	* trad-core.c (trad_unix_core_file_p): Return
	bfd_error_wrong_format rather than bfd_error_file_truncated.

	* peigen.c (_bfd_pei_swap_aouthdr_out): Pass ImageBase to
	add_data_entry.  DataDirectory virtual address is relative.
	(pe_print_idata): Account for relative DataDirectory virtual
	addresses.  Don't trash datasize inside POWERPC_LE_PE code.
	(pe_print_edata): Similarly.

	From Szabolcs Szakacsits <szaka@F-Secure.com>
	* peigen.c (dir_names): Add Delay Import Directory.
	(pe_print_idata):  Always search for bfd section containing
	idata address rather than looking up section name.  Print this
	section name rather than .idata.
	(pe_print_edata): Similarly.  Also print some fields as %08lx.
	(_bfd_pe_print_private_bfd_data_common): Print Reserved1 field as
	Win32Version.

2000-05-03  Mark Elbrecht  <snowball3@bigfoot.com>

	* bfd/coff-go32.c (COFF_SECTION_ALIGNMENT_ENTRIES): Add entry for
	the .bss section.
	* bfd/coff-stgo32.c (COFF_SECTION_ALIGNMENT_ENTRIES): Likewise.

2000-04-29  Andreas Jaeger  <aj@suse.de>

	* libbfd-in.h: Correctly check GCC version.
	* bfd-in.h: Likewise.
	* libhppa.h: Likewise.
	* libbfd.h: Regenerate.
	* bfd-in2.h: Regenerate.

2000-04-19  Michael Sokolov  <msokolov@ivan.Harhan.ORG>

	K&R compiler fixes.
	* dwarf2.c (concat_filename): Avoid string literal concatenation.
	* ieee.c (ieee_get_symtab): Don't initialise union in struct.

2000-04-12  Alan Modra  <alan@linuxcare.com.au>

	* dep-in.sed: Match space before file name, not after.
	* Makefile.am: Regenerate dependencies.
	* Makefile.in: Regenerate.

	* reloc.c (_bfd_relocate_contents): In complain_overflow_bitfield
	case, allow address wrap-around stupidly removed 2000-03-17.  Sign
	extend without an if statement.

2000-04-04  Alan Modra  <alan@linuxcare.com.au>

	* po/bfd.pot: Regenerate.

	* Makefile.am: Remove extraneous mkdep comment.